--- a/templates/bagels.html
+++ b/templates/bagels.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bagel Co</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+
+    {% for P in product %}
+        {{ P.product_name }} 
+    {% endfor %}
+
+{% endblock %}
+
