--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,31 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Staatliches&display=swap" rel="stylesheet">
     {% block styles %}
     {% endblock %}
     <title>Bagel Co</title>
 </head>
 <body>
-<h1>Rocky Mountain Bagel Co</h1>
-<img src="../media/Bagel2.png">
+
+
+<nav class="navbar navbar-light container-fluid">
+  <a class="navbar-brand" href="#">
+    <img class="BagelWings" src="https://res.cloudinary.com/cnridley/image/upload/v1610479306/bagel/Bagel2_dsfyu5.png" alt="">
+    <span class="RockyHeading">Rocky Mountain Bagel Co</span>
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="#">Menu</a>
+      <a class="nav-item nav-link" href="#">Contact</a>
+    </div>
+  </div>
+</nav>
+
     {% block content %}
     
     {% endblock %}
