--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
 
 <nav class="navbar navbar-light container-fluid">
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand" href="{{ url_for ('index') }}">
     <img class="BagelWings" src="https://res.cloudinary.com/cnridley/image/upload/v1610479306/bagel/Bagel2_dsfyu5.png" alt="">
     <span class="RockyHeading">Rocky Mountain Bagel Co</span>
   </a>
@@ -24,8 +24,8 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#">Menu</a>
+      <a class="nav-item nav-link active" href="{{ url_for ('index') }}">Home</a>
+      <a class="nav-item nav-link" href="{{ url_for ('bagels') }}">Menu</a>
       <a class="nav-item nav-link" href="#">Contact</a>
     </div>
   </div>
