--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,8 @@
       <a class="nav-item nav-link active" href="{{ url_for ('index') }}">Home</a>
       <a class="nav-item nav-link" href="{{ url_for ('bagels') }}">Menu</a>
       <a class="nav-item nav-link" href="#">Contact</a>
+      <a class="nav-item nav-link" href="#">Log In</a>
+      <a class="nav-item nav-link" href="{{ url_for ('register') }}">Register</a>
     </div>
   </div>
 </nav>
