--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,6 +52,12 @@ hr {
     color: green;
     margin-top: 15px;
 }
+
+form {
+    width: 75%;
+    margin: auto;
+    margin-top: 50px;
+}
 /* -- For large screens --*/
 @media screen and (max-width: 2000px) {
 .RockyHeading {
