--- a/templates/base.html
+++ b/templates/base.html
@@ -27,11 +27,45 @@
       <a class="nav-item nav-link active" href="{{ url_for ('index') }}">Home</a>
       <a class="nav-item nav-link" href="{{ url_for ('bagels') }}">Menu</a>
       <a class="nav-item nav-link" href="#">Contact</a>
-      <a class="nav-item nav-link" href="#">Log In</a>
+      <a class="nav-item nav-link" href="{{ url_for ('login') }}">Log In</a>
       <a class="nav-item nav-link" href="{{ url_for ('register') }}">Register</a>
+      <a class="nav-item nav-link" href="{{ url_for ('logout') }}" data-toggle="modal" data-target="#LogOutModal">Log Out</a>
     </div>
   </div>
 </nav>
+
+<!-- Modal -->
+<div class="modal fade" id="LogOutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Log Out</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to log out?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Stay Logged In</button>
+        <a href="{{ url_for('logout') }}">Log Out</a>
+      </div>
+    </div>
+  </div>
+</div>
+    <section>
+        <!-- flash messages -->
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="row">
+                        <h4 class="text-center">{{ message }}</h4>
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+    </section>
 
     {% block content %}
     
