--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
       <a class="nav-item nav-link" href="#">Contact</a>
       <a class="nav-item nav-link" href="{{ url_for ('login') }}">Log In</a>
       <a class="nav-item nav-link" href="{{ url_for ('register') }}">Register</a>
+      <a class="nav-item nav-link" href="{{ url_for ('new_bagel') }}">Add new menu item</a>
       <a class="nav-item nav-link" href="{{ url_for ('logout') }}" data-toggle="modal" data-target="#LogOutModal">Log Out</a>
     </div>
   </div>
