--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,6 +58,12 @@ form {
     margin: auto;
     margin-top: 50px;
 }
+
+.FlashMessages {
+    width: 100%;
+    justify-content: center;
+    margin: auto;
+}
 /* -- For large screens --*/
 @media screen and (max-width: 2000px) {
 .RockyHeading {
