--- a/templates/bagels.html
+++ b/templates/bagels.html
@@ -6,9 +6,14 @@
     <div class="col-12 CategoryName">BREAKFAST BAGELS</div>
     {% for B in breakfast %}
     <div class="col-md-4 col-sm-6 Menu">
-        <p><img class="MenuWings" src="https://res.cloudinary.com/cnridley/image/upload/v1610479306/bagel/Bagel2_dsfyu5.png" alt=""><bold>{{ B.product_name }}</bold> <br>
+        <p><img class="MenuWings" src="https://res.cloudinary.com/cnridley/image/upload/v1610479306/bagel/Bagel2_dsfyu5.png" alt=""><bold>{{ B.product_name }}</bold><br>
+        {% if session.user %}
+        <a href="{{ url_for('edit_bagel', product_id=B._id) }}">Edit </a>
+        <a href="#" data-toggle="modal" data-target="#DeleteModal">Delete </a><br>
+        {% endif %}
         {{ B.product_description }} <br>
-        {{ B.product_extra }} </p><br>
+        {{ B.product_extra }} </p>
+        
     </div>
     {% endfor %}
 </div>
@@ -18,7 +23,11 @@
     {% for Bagel in bagelwiches %}
     <div class="col-md-4 col-sm-6 Menu">
         <p><img class="MenuWings" src="https://res.cloudinary.com/cnridley/image/upload/v1610479306/bagel/Bagel2_dsfyu5.png" alt=""><bold>{{ Bagel.product_name }}</bold> <br>
-        {{ Bagel.product_description }} <br>
+        {% if session.user %}
+        <a href="{{ url_for('edit_bagel', product_id=Bagel._id) }}">Edit </a>
+        <a href="#">Delete </a><br>
+        {% endif %}
+            {{ Bagel.product_description }} <br>
         {{ Bagel.product_extra }} </p><br>
     </div>
     {% endfor %}
@@ -29,7 +38,11 @@
     {% for open in openfaced %}
     <div class="col-md-4 col-sm-6 Menu">
         <p><img class="MenuWings" src="https://res.cloudinary.com/cnridley/image/upload/v1610479306/bagel/Bagel2_dsfyu5.png" alt=""><bold>{{ open.product_name }}</bold> <br>
-        {{ open.product_description }} <br>
+        {% if session.user %}
+        <a href="{{ url_for('edit_bagel', product_id=open._id) }}">Edit </a>
+        <a href="#">Delete </a><br>
+        {% endif %}
+            {{ open.product_description }} <br>
         {{ open.product_extra }} </p><br>
     </div>
     {% endfor %}
@@ -40,7 +53,11 @@
     {% for P in pizzabagels %}
     <div class="col-md-4 col-sm-6 Menu">
         <p><img class="MenuWings" src="https://res.cloudinary.com/cnridley/image/upload/v1610479306/bagel/Bagel2_dsfyu5.png" alt=""><bold>{{ P.product_name }}</bold> <br>
-        {{ P.product_description }} <br>
+        {% if session.user %}
+        <a href="{{ url_for('edit_bagel', product_id=P._id) }}">Edit </a>
+        <a href="#">Delete </a><br>
+        {% endif %}
+            {{ P.product_description }} <br>
         {{ P.product_extra }} </p><br>
     </div>
     {% endfor %}
@@ -52,7 +69,11 @@
     {% for W in wrap %}
     <div class="col-md-4 col-sm-6 Menu">
         <p><img class="MenuWings" src="https://res.cloudinary.com/cnridley/image/upload/v1610479306/bagel/Bagel2_dsfyu5.png" alt=""><bold>{{ W.product_name }}</bold> <br>
-        {{ W.product_description }} <br>
+        {% if session.user %}
+        <a href="{{ url_for('edit_bagel', product_id=W._id) }}">Edit </a>
+        <a href="#">Delete </a><br>
+        {% endif %}
+            {{ W.product_description }} <br>
         {{ W.product_extra }} </p><br>
     </div>
     {% endfor %}
@@ -64,10 +85,37 @@
     {% for O in other %}
     <div class="col-md-4 col-sm-6 Menu">
         <p><img class="MenuWings" src="https://res.cloudinary.com/cnridley/image/upload/v1610479306/bagel/Bagel2_dsfyu5.png" alt=""><bold>{{ O.product_name }}</bold> <br>
+        {% if session.user %}
+        <a href="{{ url_for('edit_bagel', product_id=O._id) }}">Edit </a>
+        <a href="#">Delete </a><br>
+        {% endif %}
         {{ O.product_description }} <br>
         {{ O.product_extra }} </p><br>
     </div>
     {% endfor %}
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="DeleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Delete Item</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Are you sure?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+         {% for Break in breakfast %}
+        <a href="{{ url_for('delete', product_id=Break._id) }}">Delete!</a>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
 
