--- a/templates/bagels.html
+++ b/templates/bagels.html
@@ -9,7 +9,7 @@
         <p><img class="MenuWings" src="https://res.cloudinary.com/cnridley/image/upload/v1610479306/bagel/Bagel2_dsfyu5.png" alt=""><bold>{{ B.product_name }}</bold><br>
         {% if session.user %}
         <a href="{{ url_for('edit_bagel', product_id=B._id) }}">Edit </a>
-        <a href="">Delete </a><br>
+        <a href="{{ url_for('delete_bagel', product_id=B._id) }}">Delete </a><br>
         {% endif %}
         {{ B.product_description }} <br>
         {{ B.product_extra }} </p>
@@ -25,7 +25,7 @@
         <p><img class="MenuWings" src="https://res.cloudinary.com/cnridley/image/upload/v1610479306/bagel/Bagel2_dsfyu5.png" alt=""><bold>{{ Bagel.product_name }}</bold> <br>
         {% if session.user %}
         <a href="{{ url_for('edit_bagel', product_id=Bagel._id) }}">Edit </a>
-        <a href="#">Delete </a><br>
+        <a href="{{ url_for('delete_bagel', product_id=Bagel._id) }}">Delete </a><br>
         {% endif %}
             {{ Bagel.product_description }} <br>
         {{ Bagel.product_extra }} </p><br>
@@ -40,7 +40,7 @@
         <p><img class="MenuWings" src="https://res.cloudinary.com/cnridley/image/upload/v1610479306/bagel/Bagel2_dsfyu5.png" alt=""><bold>{{ open.product_name }}</bold> <br>
         {% if session.user %}
         <a href="{{ url_for('edit_bagel', product_id=open._id) }}">Edit </a>
-        <a href="#">Delete </a><br>
+        <a href="{{ url_for('delete_bagel', product_id=open._id) }}">Delete </a><br>
         {% endif %}
             {{ open.product_description }} <br>
         {{ open.product_extra }} </p><br>
@@ -55,7 +55,7 @@
         <p><img class="MenuWings" src="https://res.cloudinary.com/cnridley/image/upload/v1610479306/bagel/Bagel2_dsfyu5.png" alt=""><bold>{{ P.product_name }}</bold> <br>
         {% if session.user %}
         <a href="{{ url_for('edit_bagel', product_id=P._id) }}">Edit </a>
-        <a href="#">Delete </a><br>
+        <a href="{{ url_for('delete_bagel', product_id=P._id) }}">Delete </a><br>
         {% endif %}
             {{ P.product_description }} <br>
         {{ P.product_extra }} </p><br>
@@ -71,7 +71,7 @@
         <p><img class="MenuWings" src="https://res.cloudinary.com/cnridley/image/upload/v1610479306/bagel/Bagel2_dsfyu5.png" alt=""><bold>{{ W.product_name }}</bold> <br>
         {% if session.user %}
         <a href="{{ url_for('edit_bagel', product_id=W._id) }}">Edit </a>
-        <a href="#">Delete </a><br>
+        <a href="{{ url_for('delete_bagel', product_id=W._id) }}">Delete </a><br>
         {% endif %}
             {{ W.product_description }} <br>
         {{ W.product_extra }} </p><br>
@@ -87,7 +87,7 @@
         <p><img class="MenuWings" src="https://res.cloudinary.com/cnridley/image/upload/v1610479306/bagel/Bagel2_dsfyu5.png" alt=""><bold>{{ O.product_name }}</bold> <br>
         {% if session.user %}
         <a href="{{ url_for('edit_bagel', product_id=O._id) }}">Edit </a>
-        <a href="#">Delete </a><br>
+        <a href="{{ url_for('delete_bagel', product_id=O._id) }}">Delete </a><br>
         {% endif %}
         {{ O.product_description }} <br>
         {{ O.product_extra }} </p><br>
