--- a/templates/delete_bagel.html
+++ b/templates/delete_bagel.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1 class="text-center">NOO! not {{ product.product_name }}. <br>
+<h1 class="text-center PageHeader">NOO! not {{ product.product_name }}. <br>
 That was my favourite!<br><br>
 Are you sure?!</h1>
 
