--- a/templates/edit_bagel.html
+++ b/templates/edit_bagel.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1 class="text-center">Edit Menu Item</h1>
+<h1 class="text-center PageHeader">Edit Menu Item</h1>
 
 <form method="POST" action="{{ url_for('edit_bagel', product_id=product._id) }}">
   <!-- Category selection -->
