--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1 class="login text-center">Welcome, please login here!</h1>
+<h1 class="login text-center PageHeader">Please login here!</h1>
 
 <form method="POST" action="{{ url_for('login') }}">
   <div class="form-group">
