--- a/templates/new_bagel.html
+++ b/templates/new_bagel.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1 class="text-center">Add new bagel to menu</h1>
+<h1 class="text-center PageHeader">Add new bagel to menu</h1>
 
 <form method="POST" action="{{ url_for('new_bagel') }}">
   <!-- Category selection -->
