--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="{{ url_for ('index') }}">Home</a>
       <a class="nav-item nav-link" href="{{ url_for ('bagels') }}">Menu</a>
-      <a class="nav-item nav-link" href="#">Contact</a>
+      <a class="nav-item nav-link" href="{{ url_for ('contact') }}">Contact</a>
       <a class="nav-item nav-link" href="{{ url_for ('login') }}">Log In</a>
       {% if session.user %}
       <a class="nav-item nav-link" href="{{ url_for ('register') }}">Register</a>
