--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1 class="register text-center">Welcome, please register a new user here!</h1>
+<h1 class="register text-center PageHeader">Please register a new user here!</h1>
 
 <form method="POST" action="{{ url_for('register') }}">
   <div class="form-group">
